@startuml
abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}


abstract class BaseProp
{
    # bgm:MusicThread
    + BaseProp(int locationX, int locationY, int speedX, int speedY) 
    + forward(): void
	+ {abstract} work(HeroAircraft hero,boolean usemusic): void
}

class BloodProp {
    - add_blood :int
    + BloodProp(int locationX, int locationY, int speedX, int speedY)
    + get_AddBlood(): int
	+ work(HeroAircraft hero,boolean usemusic): void
}

class BloodPlusProp {
    - add_blood :int
    + BloodPlusProp(int locationX, int locationY, int speedX, int speedY)
    + get_AddBlood(): int
	+ work(HeroAircraft hero,boolean usemusic): void
}

class BulletProp {
    + BulletProp(int locationX, int locationY, int speedX, int speedY)
	+ work(HeroAircraft hero,boolean usemusic): void
}

class BulletPlusProp {
    + BulletPlusProp(int locationX, int locationY, int speedX, int speedY)
	+ work(HeroAircraft hero,boolean usemusic): void
}

class ScoreProp {
    - add_score:int 
    + ScoreProp(int locationX, int locationY, int speedX, int speedY)
	+ work(HeroAircraft hero,boolean usemusic): void
}

class BombProp {
    - enemyBullet: List<BaseBullet>
    - enemyAircrafts: List<AbstractEnemyAircraft>
    + BombProp(int locationX, int locationY, int speedX, int speedY)
	+ work(HeroAircraft hero,boolean usemusic): void
    + addBullets(List<BaseBullet> bullets): void
    + addAircrafts(List<AbstractEnemyAircraft> abstractEnemyAircrafts): void
    + notify_update(): void
}

BaseProp <|-- BloodProp
BaseProp <|-- BombProp
BaseProp <|-- BulletProp
BaseProp <|-- BulletPlusProp
BaseProp <|-- ScoreProp
BaseProp <|-- BloodPlusProp
AbstractFlyingObject <|-- BaseProp


@enduml